<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="300dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/unameField"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="48dp"
            android:autofillHints="password"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/passwordField2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="password"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/buttonSwitchRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textColor="#212121"
            android:theme="@style/ButtonMain" />

    </LinearLayout>

</FrameLayout>